--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ app.data.partitioned-dir=${app.data.base-dir}/partitioned
 
 # Kaggle
 kaggle.dataset=olistbr/brazilian-ecommerce
-kaggle.username=${KAGGLE_USERNAME}
-kaggle.key=${KAGGLE_KEY}
+#kaggle.username=${KAGGLE_USERNAME}
+#kaggle.key=${KAGGLE_KEY}
 
 # Logging
 logging.level.com.ecommerce.dataprovider=DEBUG
