--- a/.gitignore
+++ b/.gitignore
@@ -23,43 +23,96 @@
 hs_err_pid*
 replay_pid*
 
-/target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
-### STS ###
-.apt_generated
+# Eclipse
 .classpath
-.factorypath
 .project
 .settings/
-.springBeans
-.sts4-cache
+.factorypath
+.metadata/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-### IntelliJ ###
+# IntelliJ
 .idea/
-*.iws
 *.iml
+*.iws
 *.ipr
+*.ids
+*.orig
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
-/.hg/
 /.nb-gradle/
+build/
 
-### VS Code ###
+# VS Code
 .vscode/
 
-### Logs ###
-logs
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Gradle
+.gradle/
+build/
+
+# Mac
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# Data directories
+data/raw/    # But you might want to keep small sample data
+*.csv        # Large data files shouldn't be in git
+*.parquet
+*.avro
+*.json
+*.orc
+
+# Logs
 *.log
+logs/
 
-### Data ###
-data/
-!.gitkeep
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-*.env
+# Docker
+docker-data/  # Database data volumes.env.prod
+.env.prod
+
+# Parquet files
+*.parquet
+
+# Hadoop/Spark files
+*.crc
+_SUCCESS
+.success
+
+# Common data files to ignore
+*.csv
+*.json
+*.txt
+*.log
